Force scrollbar to be always on to stop content shifting

--- a/services/agora/src/css/app.scss
+++ b/services/agora/src/css/app.scss
@@ -43,4 +43,5 @@ a {
 
 html {
   overscroll-behavior: none;
+  overflow-y: scroll;
 }
